hephynator-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
  name: hephynator
  namespace: hephynator
spec:
  rules:
  - host: hephynator.teamhephy.info
    http:
      paths:
      - backend:
          serviceName: hephynator
          servicePort: 80
        path: /
  tls:
  - hosts:
    - hephynator.teamhephy.info
    secretName: hephynator.teamhephy.info
